sagit: Configure performance profiles
based of the work of Sultanxda <sultanxda@gmail.com> for the OnePlus3

considered a WIP for now, as it uses the OP3 profile settings until
a mighty kernel dev comes along and adjusts them for msm8998.

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -27,6 +27,8 @@
 #
 #
 
+import init.qcom.power.rc
+
 on early-init
     mkdir /firmware 0771 system system
     mkdir /bt_firmware 0771 system system
