--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -1,3 +1,64 @@
+on init
+    write /dev/stune/foreground/schedtune.sched_boost_no_override 1
+    write /dev/stune/top-app/schedtune.sched_boost_no_override 1
+    write /dev/stune/schedtune.colocate 0
+    write /dev/stune/background/schedtune.colocate 0
+    write /dev/stune/system-background/schedtune.colocate 0
+    write /dev/stune/foreground/schedtune.colocate 0
+    write /dev/stune/top-app/schedtune.colocate 1
+
+on boot
+    # Burn the CPU until boot is done
+    write /dev/cpuset/foreground/cpus 0-7
+    write /dev/cpuset/foreground/boost/cpus 0-7
+    write /dev/cpuset/background/cpus 0-7
+    write /dev/cpuset/system-background/cpus 0-7
+    write /dev/cpuset/top-app/cpus 0-7
+    write /dev/cpuset/camera-daemon/cpus 0-7
+
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
+    # LITTLE, all cores online
+    write /sys/devices/system/cpu/cpu0/online 1
+    write /sys/devices/system/cpu/cpu1/online 1
+    write /sys/devices/system/cpu/cpu2/online 1
+    write /sys/devices/system/cpu/cpu3/online 1
+    # big, all cores online
+    write /sys/devices/system/cpu/cpu4/online 1
+    write /sys/devices/system/cpu/cpu5/online 1
+    write /sys/devices/system/cpu/cpu6/online 1
+    write /sys/devices/system/cpu/cpu7/online 1
+    # 4 MiB readahead at boot
+    write /sys/block/mmcblk0/queue/read_ahead_kb 4096
+
+    # Enable sched boost
+    write /proc/sys/kernel/sched_boost 1
+
+on charger
+    mount ext4 /dev/block/bootdevice/by-name/system /system ro
+
+    write /sys/devices/system/cpu/cpu1/online 0
+    write /sys/devices/system/cpu/cpu2/online 0
+    write /sys/devices/system/cpu/cpu3/online 0
+    write /sys/devices/system/cpu/cpu5/online 0
+    write /sys/devices/system/cpu/cpu6/online 0
+    write /sys/devices/system/cpu/cpu7/online 0
+    write /sys/module/msm_thermal/core_control/cpus_offlined 254
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "powersave"
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor "powersave"
+    write /sys/module/lpm_levels/parameters/sleep_disabled 0
+
+    start dashd
+
+on property:sys.boot_completed=1
+    write /dev/cpuset/foreground/cpus 1-3,5
+    write /dev/cpuset/foreground/boost/cpus 1-4
+    write /dev/cpuset/background/cpus 1-4
+    write /dev/cpuset/system-background/cpus 2-4
+    write /dev/cpuset/top-app/cpus 0-7
+    write /dev/cpuset/camera-daemon/cpus 0-5
+    # Reduce to 2 MiB after boot
+write /sys/block/mmcblk0/queue/read_ahead_kb 2048
+
 on property:sys.perf.profile=0
     # Set low-power performance settings
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "conservative"
