cheeseburger: init: create oemnvitems for RIL
01-02 19:15:45.839   836  1061 E RILQ    : (1/836): RIL[1][main] create_path: Path
/data/oemnvitems/ does not exist. Attempting to create..
01-02 19:15:45.840   836  1061 E RILQ    : (1/836): RIL[1][main] create_path: Error creating
directory '/data/oemnvitems/'. Permission denied.
01-02 19:15:45.840   836  1061 E RILQ    : (1/836): RIL[1][main] oem_qcril_dump_nv: write NV_6855
failed.
01-02 19:15:45.840   836  1061 E RILQ    : (1/836): RIL[1][main] oem_write_version_nv: version :
01-02 19:15:45.840   836  1061 E RILQ    : (1/836): RIL[1][main] oem_write_version_nv: read
Version_size from prop failed!

Change-Id: Ie5cb415e8e4b7c5982bdf85dc77bde65d377a315

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -112,6 +112,9 @@ on post-fs-data
     mkdir /data/misc/qdmastats 0700 system system
     mkdir /data/misc/qdma 0770 system system
 
+    # Create oemnvitems for RIL
+    mkdir /data/oemnvitems  0771 radio radio
+
 # For cpusets initialize for Silver Only first and then Silver + Gold
 # Silver Only configuration cannot work with 0-7
 on boot
