--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -200,8 +200,8 @@ on property:persist.adb.tcp.port=*
     stop adbd
     start adbd
 
-on charger
-    start hvdcp_opti
+#on charger
+#    start hvdcp_opti
 
 ## import cne init file
 service qvop-daemon /system/bin/qvop-daemon
@@ -601,29 +601,6 @@ service readmac /system/bin/readmac
     user root
     group root
     oneshot
-
-on charger
-    write /sys/class/input/input0/enabled 0
-    write /sys/class/input/input1/enabled 0
-    write /sys/class/input/input2/enabled 0
-    write /sys/class/input/input3/enabled 0
-    write /sys/class/input/input4/enabled 0
-    write /sys/module/lpm_levels/parameters/sleep_disabled 0
-    write /sys/module/lpm_levels/system/system-pc/idle_enabled 0
-    write /sys/devices/system/cpu/cpu0/online 1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "userspace"
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 300000
-    write /sys/devices/system/cpu/cpu1/online 1
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "userspace"
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 300000
-    write /sys/devices/system/cpu/cpu2/online 0
-    write /sys/devices/system/cpu/cpu3/online 0
-    write /sys/devices/system/cpu/cpu4/online 0
-    write /sys/devices/system/cpu/cpu5/online 0
-    write /sys/devices/system/cpu/cpu6/online 0
-    write /sys/devices/system/cpu/cpu7/online 0
-    write /sys/module/msm_thermal/parameters/enabled "N"
-    start hvdcp_opti
 
 on property:slpi.restart=1
     write /sys/kernel/debug/msm_subsys/slpi restart
