--- a/rootdir/root/init.qcom.rc
+++ b/rootdir/root/init.qcom.rc
@@ -157,6 +157,14 @@ on boot
     chmod 0660 /sys/module/gf_spi/parameters/report_home_events
     chmod 0660 /sys/devices/soc/soc:fingerprint_fpc/enable_key_events
 
+    chown system system /proc/touchpanel
+    chown system system /sys/devices/soc/c179000.i2c/i2c-5/5-0020/input/input1/0dbutton
+    chown system system /sys/devices/soc/c179000.i2c/i2c-5/5-0020/input/input1/wake_gesture
+    chown system system /sys/devices/soc/c179000.i2c/i2c-5/5-0020/input/input1/reversed_keys_enable
+    chmod 0660 /sys/devices/soc/c179000.i2c/i2c-5/5-0020/input/input1/0dbutton
+    chmod 0660 /sys/devices/soc/c179000.i2c/i2c-5/5-0020/input/input1/wake_gesture
+    chmod 0660 /sys/devices/soc/c179000.i2c/i2c-5/5-0020/input/input1/reversed_keys_enable
+
     setprop wifi.interface wlan0
 
 #   Define TCP buffer sizes for various networks
