sagit: add bt-mac-generator for Xiaomi
Based on 'msm8998: add bt-mac-generator' by @codeworkx

"Reads bluetooth mac from NV and writes to /data/misc/bluetooth/bdaddr
where it gets picked up via property ro.bt.bdaddr_path

Based on wifi-mac-generator."
Modified to verify using regex, and pick up the Xiaomi persist bt.mac file.

Change-Id: I95086ca676c56d62fc3ca0c7d17afee6cf3a01cb

--- a/rootdir/root/init.target.rc
+++ b/rootdir/root/init.target.rc
@@ -184,6 +184,9 @@ on boot
 #Load WLAN driver
    insmod /vendor/lib/modules/qca_cld3_wlan.ko
 
+   # Generate bt mac
+   start bt-mac-generator
+
 #Peripheral manager
 service per_mgr /vendor/bin/pm-service
     class core
@@ -208,6 +211,13 @@ on property:init.svc.per_mgr=running
 
 on property:sys.shutdown.requested=*
     stop per_proxy
+
+service bt-mac-generator /system/vendor/bin/bt-mac-generator
+    class main
+    user root
+    group root
+    oneshot
+    disabled
 
 on charger
     write /sys/class/input/input0/enabled 0
