--- a/rootdir/root/init.target.rc
+++ b/rootdir/root/init.target.rc
@@ -182,7 +182,8 @@ on boot
    insmod /system/lib/modules/msm-vidc-table-gov.ko
 
 #Load WLAN driver
-   insmod /vendor/lib/modules/qca_cld3_wlan.ko
+   insmod /vendor/lib/modules/wlan.ko
+   setprop wlan.driver.status "ok"
 
    # Generate bt mac
    start bt-mac-generator
