--- a/rootdir/root/init.target.rc
+++ b/rootdir/root/init.target.rc
@@ -76,6 +76,12 @@ on post-fs
     write /dev/ipa 1
     insmod /vendor/lib/modules/exfat.ko
 
+# OTG support
+on property:persist.sys.oem.otg_support=true
+    write /sys/class/power_supply/usb/otg_switch 1
+on property:persist.sys.oem.otg_support=false
+    write /sys/class/power_supply/usb/otg_switch 0
+
 on post-fs-data
     mkdir /data/tombstones 0771 system system
     mkdir /tombstones/modem 0771 system system
