sagit: Move readmac to /vendor
Change-Id: Ifea0f1c649717a5b1ea50449e6447e40cf00791a

--- a/rootdir/root/init.qcom.rc
+++ b/rootdir/root/init.qcom.rc
@@ -1042,6 +1042,12 @@ service qvop-daemon /vendor/bin/qvop-daemon
     user system
     group system drmrpc
 
+service readmac /system/vendor/bin/readmac
+    class main
+    user root
+    group root oem_2950
+    oneshot
+
 service atfwd /vendor/bin/ATFWD-daemon
     class late_start
     user system
