Adaptation OnePlus Cheesburger pocketmode for sagit

--- a/pocketmode/AndroidManifest.xml
+++ b/pocketmode/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cyanogenmod.pocketmode"
+    package="org.lineageos.pocketmode"
     android:versionCode="1"
     android:versionName="1.0"
     android:sharedUserId="android.uid.system">
@@ -8,20 +8,21 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <uses-sdk
-        android:minSdkVersion="27"/>
+        android:minSdkVersion="21"
+        android:targetSdkVersion="21"/>
 
     <application
         android:label="XiaomiPocketMode"
         android:persistent="true">
 
-        <receiver android:name="com.cyanogenmod.pocketmode.BootCompletedReceiver">
+        <receiver android:name="org.lineageos.pocketmode.BootCompletedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
-        <service android:name="com.cyanogenmod.pocketmode.PocketModeService"
+        <service android:name="org.lineageos.pocketmode.PocketModeService"
                  android:permission="XiaomiPocketModeService">
         </service>
 
