--- a/rootdir/root/init.target.rc
+++ b/rootdir/root/init.target.rc
@@ -312,6 +312,7 @@ service adsprpcd /vendor/bin/adsprpcd
    class main
    user media
    group media
+    writepid /dev/cpuset/system-background/tasks
 
 service hbtp /vendor/bin/hbtp_daemon
     class main
@@ -398,6 +399,7 @@ service imsqmidaemon /vendor/bin/imsqmidaemon
     user system
     socket ims_qmid stream 0660 system radio
     group radio log diag
+    writepid /dev/cpuset/system-background/tasks
 
 service imsdatadaemon /vendor/bin/imsdatadaemon
     class main
@@ -405,6 +407,7 @@ service imsdatadaemon /vendor/bin/imsdatadaemon
     socket ims_datad stream 0660 system radio
     group system wifi radio inet log diag
     disabled
+    writepid /dev/cpuset/system-background/tasks
 #
 #service mdm_helper /system/bin/mdm_helper
 #    class core
@@ -470,12 +473,14 @@ service ims_rtp_daemon /vendor/bin/ims_rtp_daemon
    user system
    group radio diag inet log
    disabled
+   writepid /dev/cpuset/system-background/tasks
 
 service vendor.imsrcsservice /vendor/bin/imsrcsd
    class main
    user system
    group radio diag inet log
    disabled
+   writepid /dev/cpuset/system-background/tasks
 
 on property:vendor.ims.DATA_DAEMON_STATUS=1
     start ims_rtp_daemon
@@ -522,6 +527,7 @@ service energy-awareness /vendor/bin/energy-awareness
     user root
     group system
     oneshot
+    writepid /dev/cpuset/system-background/tasks
 
 service mdtpd /vendor/bin/mdtpd
     class late_start
@@ -537,6 +543,7 @@ service hvdcp_opti /vendor/bin/hvdcp_opti
     class main
     user root
     group system wakelock
+    writepid /dev/cpuset/system-background/tasks
 
 service qvrd /system/bin/qvrservice
     class late_start
