--- a/hal/gps/etc/izat.conf
+++ b/hal/gps/etc/izat.conf
@@ -37,7 +37,7 @@ LPPE_SRN_DATA_SCAN_INJECT_TIME=2
 # without EULA consent, but the uncertainty can be high.
 # QNP preferred mode prefers QNP when there is EULA consent,
 # otherwise OSNLP is used.
-NLP_MODE = 1
+NLP_MODE = 4
 NLP_MODE_EMERGENCY = 2
 NLP_TOLERANCE_TIME_FIRST = 5000
 NLP_TOLERANCE_TIME_AFTER = 20000
@@ -102,12 +102,12 @@ GTP_CELL_PROC=MODEM
 #GTP_CELL valid modes:
 # DISABLED
 # BASIC
-GTP_CELL=DISABLED
+GTP_CELL=BASIC
 
 #GTP_WIFI valid modes:
 # DISABLED
 # BASIC
-GTP_WIFI=DISABLED
+GTP_WIFI=BASIC
 
 #GTP_WAA valid modes:
 # DISABLED
@@ -118,7 +118,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=PREMIUM
+SAP=BASIC
 
 #ODCPI valid modes:
 #DISABLED
@@ -191,7 +191,7 @@ HARDWARE_TYPE=automotive
 #DISABLED -> if this process is to be disabled on lean and mean targets
 PROCESS_NAME=garden_app
 PROCESS_ARGUMENT=-l 0 -T 1
-PROCESS_STATE=DISABLED
+PROCESS_STATE=ENABLED
 PROCESS_GROUPS=gps diag
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
@@ -214,7 +214,7 @@ HARDWARE_TYPE=all
 PROCESS_NAME=lowi-server
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=gps net_admin wifi inet diag
+PROCESS_GROUPS=gps net_admin wifi inet oem_2950
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf303
 PLATFORMS=all
@@ -246,8 +246,8 @@ HARDWARE_TYPE=all
 
 PROCESS_NAME=slim_daemon
 PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
-PROCESS_GROUPS=gps diag can
+PROCESS_STATE=ENABLED
+PROCESS_GROUPS=gps oem_2950 can
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
 PLATFORMS=all
@@ -274,7 +274,3 @@ HARDWARE_TYPE=all
 # XTRA client.
 ##################################################
 # XC20_LAUNCH_PROCESS_NAME=garden_app
-
-#Accuracy threshold for ZPP positions
-# less accurate positions are ignored
-ZPP_ACCURACY_THRESHOLD=1000
