--- a/configs/nfc/libnfc-brcm.conf
+++ b/configs/nfc/libnfc-brcm.conf
@@ -1,21 +1,16 @@
-###################### Start of libnfc-common.conf #######################
-
+###################### Start of libnfc-brcm.conf #######################
 ###############################################################################
 # Application options
-APPL_TRACE_LEVEL=0xFF
-PROTOCOL_TRACE_LEVEL=0xFFFFFFFF
-
+NFC_DEBUG_ENABLED=0
 ###############################################################################
 # performance measurement
 # Change this setting to control how often USERIAL log the performance (throughput)
 # data on read/write/poll
 # defailt is to log performance dara for every 100 read or write
 #REPORT_PERFORMANCE_MEASURE=100
-
 ###############################################################################
 # File used for NFA storage
 NFA_STORAGE="/data/nfc"
-
 ###############################################################################
 # Snooze Mode Settings
 #
@@ -31,11 +26,9 @@ NFA_STORAGE="/data/nfc"
 #       1             Host Wake active mode (0=ActiveLow 1=ActiveHigh)
 #
 #SNOOZE_MODE_CFG={08:00:00:00:01}
-
 ###############################################################################
 # Insert a delay in milliseconds after NFC_WAKE and before write to NFCC
 #NFC_WAKE_DELAY=20
-
 ###############################################################################
 # Various Delay settings (in ms) used in USERIAL
 #  POWER_ON_DELAY
@@ -48,12 +41,10 @@ NFA_STORAGE="/data/nfc"
 #POWER_ON_DELAY=300
 #PRE_POWER_OFF_DELAY=0
 #POST_POWER_OFF_DELAY=0
-
 ###############################################################################
 # Maximum time (ms) to wait for RESET NTF after setting REG_PU to high
 # The default is 1000.
 #NFCC_ENABLE_TIMEOUT=0
-
 ###############################################################################
 # LPTD mode configuration
 #  byte[0] is the length of the remaining bytes in this value
@@ -66,7 +57,6 @@ NFA_STORAGE="/data/nfc"
 #  By default, LPTD is enabled and default settings are used.
 #  See nfc_hal_dm_cfg.c for defaults
 #LPTD_CFG={23:B9:21:01:02:FF:FF:04:A0:0F:40:00:80:02:02:10:00:00:00:31:0C:30:00:00:00:00:00:00:00:00:00:00:00:00:00:00}
-
 ###############################################################################
 # Startup Configuration (100 bytes maximum)
 #
@@ -78,7 +68,6 @@ NFA_STORAGE="/data/nfc"
 #
 #                                                                          AA BB
 #NFA_DM_START_UP_CFG={1F:CB:01:01:A5:01:01:CA:14:00:00:00:00:06:E8:03:00:00:00:00:00:00:00:00:00:00:00:00:00:80:01:01}
-
 ###############################################################################
 # Startup Vendor Specific Configuration (100 bytes maximum);
 #  byte[0] TLV total len = 0x5
@@ -88,7 +77,6 @@ NFA_STORAGE="/data/nfc"
 #  byte[4] 0=turn off RF frame logging; 1=turn on
 #  byte[5] 0=turn off SWP frame logging; 1=turn on
 #  NFA_DM_START_UP_VSC_CFG={05:2F:09:02:01:01}
-
 ###############################################################################
 # Antenna Configuration - This data is used when setting 0xC8 config item
 # at startup (before discovery is started).  If not used, no value is sent.
@@ -103,7 +91,6 @@ NFA_STORAGE="/data/nfc"
 # array[0] = 0x20 is length of the payload from array[1] to the end
 # array[1] = 0xC8 is PREINIT_DSP_CFG
 #PREINIT_DSP_CFG={20:C8:1E:06:1F:00:0F:03:3C:00:04:24:00:1C:00:75:00:77:00:76:00:1C:00:03:00:0A:00:48:01:00:00:40:04}
-
 ###############################################################################
 # Configure crystal frequency when internal LPO can't detect the frequency.
 #XTAL_FREQUENCY=0
@@ -111,19 +98,16 @@ NFA_STORAGE="/data/nfc"
 # Configure the default Destination Gate used by HCI (the default is 4, which
 # is the ETSI loopback gate.
 NFA_HCI_DEFAULT_DEST_GATE=0xF0
-
 ###############################################################################
 # Configure the single default SE to use.  The default is to use the first
 # SE that is detected by the stack.  This value might be used when the phone
 # supports multiple SE (e.g. 0xF3 and 0xF4) but you want to force it to use
 # one of them (e.g. 0xF4).
 #ACTIVE_SE=0xF3
-
 ###############################################################################
 # Configure the default NfcA/IsoDep techology and protocol route. Can be
 # either a secure element (e.g. 0xF4) or the host (0x00)
 #DEFAULT_ISODEP_ROUTE=0x00
-
 ###############################################################################
 # Configure the NFC Extras to open and use a static pipe.  If the value is
 # not set or set to 0, then the default is use a dynamic pipe based on a
@@ -132,93 +116,70 @@ NFA_HCI_DEFAULT_DEST_GATE=0xF0
 #NFA_HCI_STATIC_PIPE_ID_F3=0x70
 #NFA_HCI_STATIC_PIPE_ID_01=0x19
 NFA_HCI_STATIC_PIPE_ID_C0=0x19
-NFA_HCI_STATIC_PIPE_ID_02=0x20
 ###############################################################################
 # When disconnecting from Oberthur secure element, perform a warm-reset of
 # the secure element to deselect the applet.
 # The default hex value of the command is 0x3.  If this variable is undefined,
 # then this feature is not used.
 #OBERTHUR_WARM_RESET_COMMAND=0x03
-
 ###############################################################################
 # Force UICC to only listen to the following technology(s).
 # The bits are defined as tNFA_TECHNOLOGY_MASK in nfa_api.h.
 # Default is NFA_TECHNOLOGY_MASK_A | NFA_TECHNOLOGY_MASK_B | NFA_TECHNOLOGY_MASK_F
 UICC_LISTEN_TECH_MASK=0x07
-
 ###############################################################################
-# Forcing HOST to listen for a selected protocol
-# 0x00 : Disable Host Listen
-# 0x01 : Enable Host to Listen (A)  for ISO-DEP tech A
-# 0x02 : Enable Host to Listen (B)  for ISO-DEP tech B
-# 0x04 : Enable Host to Listen (F)  for T3T Tag Type Protocol tech F
-# 0x07 : Enable Host to Listen (ABF)for ISO-DEP tech AB & T3T Tag Type Protocol tech F
-HOST_LISTEN_TECH_MASK=0x07
-
+# Force HOST listen feature enable or disable.
+# 0: Disable
+# 1: Enable
+HOST_LISTEN_ENABLE=0x01
 ###############################################################################
 # Enabling/Disabling Forward functionality
 # Disable           0x00
 # Enable            0x01
 NXP_FWD_FUNCTIONALITY_ENABLE=0x01
-
 ###############################################################################
 # Allow UICC to be powered off if there is no traffic.
 # Timeout is in ms. If set to 0, then UICC will not be powered off.
 #UICC_IDLE_TIMEOUT=30000
 UICC_IDLE_TIMEOUT=0
-
 ###############################################################################
 # AID for Empty Select command
 # If specified, this AID will be substituted when an Empty SELECT command is
 # detected.  The first byte is the length of the AID.  Maximum length is 16.
 AID_FOR_EMPTY_SELECT={08:A0:00:00:01:51:00:00:00}
 ###############################################################################
-# Maximum Number of Credits to be allowed by the NFCC
-#   This value overrides what the NFCC specifices allowing the host to have
-#   the control to work-around transport limitations.  If this value does
-#   not exist or is set to 0, the NFCC will provide the number of credits.
-MAX_RF_DATA_CREDITS=1
-
-###############################################################################
 # This setting allows you to disable registering the T4t Virtual SE that causes
 # the NFCC to send PPSE requests to the DH.
 # The default setting is enabled (i.e. T4t Virtual SE is registered).
 #REGISTER_VIRTUAL_SE=1
-
 ###############################################################################
 # When screen is turned off, specify the desired power state of the controller.
 # 0: power-off-sleep state; DEFAULT
 # 1: full-power state
 # 2: screen-off card-emulation (CE4/CE3/CE1 modes are used)
 SCREEN_OFF_POWER_STATE=1
-
 ###############################################################################
 # Firmware patch file
 #  If the value is not set then patch download is disabled.
 #FW_PATCH="/vendor/firmware/bcm2079x_firmware.ncd"
-
 ###############################################################################
 # Firmware pre-patch file (sent before the above patch file)
 #  If the value is not set then pre-patch is not used.
 #FW_PRE_PATCH="/vendor/firmware/bcm2079x_pre_firmware.ncd"
-
 ###############################################################################
 # Firmware patch format
 #   1 = HCD
 #   2 = NCD (default)
 #NFA_CONFIG_FORMAT=2
-
 ###############################################################################
 # SPD Debug mode
 #  If set to 1, any failure of downloading a patch will trigger a hard-stop
 #SPD_DEBUG=0
-
 ###############################################################################
 # SPD Max Retry Count
 #  The number of attempts to download a patch before giving up (defualt is 3).
 #  Note, this resets after a power-cycle.
 #SPD_MAX_RETRY_COUNT=3
-
 ###############################################################################
 # transport driver
 #
@@ -231,7 +192,6 @@ SCREEN_OFF_POWER_STATE=1
 #    "/dev/bcmspinfc"   (SPI)
 #    "/dev/btusb0"      (BT USB)
 #TRANSPORT_DRIVER="/dev/bcm2079x-i2c"
-
 ###############################################################################
 # power control driver
 # Specify a kernel driver that support ioctl commands to control NFC_EN and
@@ -244,22 +204,18 @@ SCREEN_OFF_POWER_STATE=1
 #    "/dev/bcmspinfc"   (SPI)
 #    i2c and spi driver may be used to control NFC_EN and NFC_WAKE signal
 #POWER_CONTROL_DRIVER="/dev/bcm2079x-i2c"
-
 ###############################################################################
 # I2C transport driver options
 # Mako does not support 10-bit I2C addresses
 # Revert to 7-bit address
 #BCMI2CNFC_ADDRESS=0x77
-
 ###############################################################################
 # I2C transport driver try to read multiple packets in read() if data is available
 # remove the comment below to enable this feature
 #READ_MULTIPLE_PACKETS=1
-
 ###############################################################################
 # SPI transport driver options
 #SPI_NEGOTIATION={0A:F0:00:01:00:00:00:FF:FF:00:00}
-
 ###############################################################################
 # UART transport driver options
 #
@@ -268,13 +224,11 @@ SCREEN_OFF_POWER_STATE=1
 # DATABITS=8, 7, 6, 5
 # PARITY="even" | "odd" | "none"
 # STOPBITS="0" | "1" | "1.5" | "2"
-
 #UART_PORT=2
 #UART_BAUD=115200
 #UART_DATABITS=8
 #UART_PARITY="none"
 #UART_STOPBITS="1"
-
 ###############################################################################
 # Insert a delay in microseconds per byte after a write to NFCC.
 # after writing a block of data to the NFCC, delay this an amopunt of time before
@@ -282,34 +236,16 @@ SCREEN_OFF_POWER_STATE=1
 #   NFC_WRITE_DELAY * (number of byte written) / 1000 milliseconds
 # e.g. after 259 bytes is written, delay (259 * 20 / 1000) 5 ms before next write
 #NFC_WRITE_DELAY=20
-
 ###############################################################################
 # Maximum Number of Credits to be allowed by the NFCC
 #   This value overrides what the NFCC specifices allowing the host to have
 #   the control to work-around transport limitations.  If this value does
 #   not exist or is set to 0, the NFCC will provide the number of credits.
 MAX_RF_DATA_CREDITS=1
-
 ###############################################################################
 # Default poll duration (in ms)
 #  The defualt is 500ms if not set (see nfc_target.h)
 #NFA_DM_DISC_DURATION_POLL=333
-###############################################################################
-# Antenna Configuration - This data is used when setting 0xC8 config item
-# at startup (before discovery is started).  If not used, no value is sent.
-#
-# The settings for this value are documented here:
-# http://wcgbu.broadcom.com/wpan/PM/Project%20Document%20Library/bcm20791B0/
-#   Design/Doc/PHY%20register%20settings/BCM20791-B2-1027-02_PHY_Recommended_Reg_Settings.xlsx
-# This document is maintained by Paul Forshaw.
-#
-# The values marked as ?? should be tweaked per antenna or customer/app:
-# {20:C8:1E:06:??:00:??:??:??:00:??:24:00:1C:00:75:00:77:00:76:00:1C:00:03:00:0A:00:??:01:00:00:40:04}
-# array[0] = 0x20 is length of the payload from array[1] to the end
-# array[1] = 0xC8 is PREINIT_DSP_CFG
-#PREINIT_DSP_CFG={20:C8:1E:06:1F:00:0F:03:3C:00:04:24:00:1C:00:75:00:77:00:76:00:1C:00:03:00:0A:00:48:01:00:00:40:04}
-
-
 ###############################################################################
 # Choose the presence-check algorithm for type-4 tag.  If not defined, the default value is 1.
 # 0  NFA_RW_PRES_CHK_DEFAULT; Let stack selects an algorithm
@@ -317,82 +253,65 @@ MAX_RF_DATA_CREDITS=1
 # 2  NFA_RW_PRES_CHK_RESET; Deactivate to Sleep, then re-activate
 # 3  NFA_RW_PRES_CHK_RB_CH0; Type-4 tag protocol's ReadBinary command on channel 0
 # 4  NFA_RW_PRES_CHK_RB_CH3; Type-4 tag protocol's ReadBinary command on channel 3
-PRESENCE_CHECK_ALGORITHM=1
-
+# 5  NFA_RW_PRES_CHK_ISO_DEP_NAK; Type - 4 tag protocol iso-dep nak presence check
+#    command is sent waiting for rsp and ntf.
+PRESENCE_CHECK_ALGORITHM=5
 ###############################################################################
 # Force tag polling for the following technology(s).
 # The bits are defined as tNFA_TECHNOLOGY_MASK in nfa_api.h.
 # Default is NFA_TECHNOLOGY_MASK_A | NFA_TECHNOLOGY_MASK_B |
 #            NFA_TECHNOLOGY_MASK_F | NFA_TECHNOLOGY_MASK_ISO15693 |
 #            NFA_TECHNOLOGY_MASK_B_PRIME | NFA_TECHNOLOGY_MASK_KOVIO |
-#            NFA_TECHNOLOGY_MASK_A_ACTIVE | NFA_TECHNOLOGY_MASK_F_ACTIVE.
+#            NFA_TECHNOLOGY_MASK_ACTIVE
 #
 # Notable bits:
 # NFA_TECHNOLOGY_MASK_A             0x01    /* NFC Technology A             */
 # NFA_TECHNOLOGY_MASK_B             0x02    /* NFC Technology B             */
 # NFA_TECHNOLOGY_MASK_F             0x04    /* NFC Technology F             */
-# NFA_TECHNOLOGY_MASK_ISO15693	    0x08    /* Proprietary Technology       */
-# NFA_TECHNOLOGY_MASK_KOVIO	    0x20    /* Proprietary Technology       */
-# NFA_TECHNOLOGY_MASK_A_ACTIVE      0x40    /* NFC Technology A active mode */
-# NFA_TECHNOLOGY_MASK_F_ACTIVE      0x80    /* NFC Technology F active mode */
-POLLING_TECH_MASK=0xEF
-
+# NFA_TECHNOLOGY_MASK_ISO15693      0x08    /* Proprietary Technology       */
+# NFA_TECHNOLOGY_MASK_KOVIO         0x20    /* Proprietary Technology       */
+# NFA_TECHNOLOGY_MASK_ACTIVE        0x40    /* NFC Technology Active        */
+POLLING_TECH_MASK=0x6F
 ###############################################################################
 # Force P2P to only listen for the following technology(s).
 # The bits are defined as tNFA_TECHNOLOGY_MASK in nfa_api.h.
 # Default is NFA_TECHNOLOGY_MASK_A | NFA_TECHNOLOGY_MASK_F |
-#            NFA_TECHNOLOGY_MASK_A_ACTIVE | NFA_TECHNOLOGY_MASK_F_ACTIVE
+# NFA_TECHNOLOGY_MASK_ACTIVE
 #
 # Notable bits:
-# NFA_TECHNOLOGY_MASK_A	            0x01    /* NFC Technology A             */
-# NFA_TECHNOLOGY_MASK_F	            0x04    /* NFC Technology F             */
-# NFA_TECHNOLOGY_MASK_A_ACTIVE      0x40    /* NFC Technology A active mode */
-# NFA_TECHNOLOGY_MASK_F_ACTIVE      0x80    /* NFC Technology F active mode */
-P2P_LISTEN_TECH_MASK=0xC5
-
+# NFA_TECHNOLOGY_MASK_A             0x01    /* NFC Technology A             */
+# NFA_TECHNOLOGY_MASK_F             0x04    /* NFC Technology F             */
+# NFA_TECHNOLOGY_MASK_ACTIVE         0x40    /* NFC Technology Active        */
+P2P_LISTEN_TECH_MASK=0x45
 PRESERVE_STORAGE=0x01
-
-# 0x00 Disable HCE
-# 0x01 Enable HCE
-HOST_LISTEN_ENABLE=0x01
-
 ###############################################################################
 # Override the stack default for NFA_EE_MAX_EE_SUPPORTED set in nfc_target.h.
 # The value is set to 3 by default as it assumes we will discover 0xF2,
 # 0xF3, and 0xF4. If a platform will exclude and SE, this value can be reduced
 # so that the stack will not wait any longer than necessary.
-
 # Maximum EE supported number
 # NXP PN547C2 0x02
 # NXP PN65T 0x03
 # NXP PN548C2 0x02
 # NXP PN66T 0x03
-# NXP PN551 0x02
-# NXP PN67T 0x03
-# NXP PN553 0x02
-# NXP PN80T 0x04
 NFA_MAX_EE_SUPPORTED=0x02
-
 ###############################################################################
 # NCI Hal Module name
-NCI_HAL_MODULE="nfc_nci.msm8998"
-
+NCI_HAL_MODULE="nfc_nci"
 ##############################################################################
 # Deactivate notification wait time out in seconds used in ETSI Reader mode
 # 0 - Infinite wait
-NFA_DM_DISC_NTF_TIMEOUT=100
-
+#NFA_DM_DISC_NTF_TIMEOUT=0
 ###############################################################################
 # AID_MATCHING constants
 # AID_MATCHING_EXACT_ONLY 0x00
 # AID_MATCHING_EXACT_OR_PREFIX 0x01
 # AID_MATCHING_PREFIX_ONLY 0x02
-AID_MATCHING_MODE=0x01
-
+# AID_MATCHING_EXACT_OR_SUBSET_OR_PREFIX 0x03
+AID_MATCHING_MODE=0x03
 ###############################################################################
 # Default Secure Element route id
 DEFAULT_OFFHOST_ROUTE=0x02
-
 ###############################################################################
 # Vendor Specific Proprietary Protocol & Discovery Configuration
 # Set to 0xFF if unsupported
@@ -406,9 +325,15 @@ DEFAULT_OFFHOST_ROUTE=0x02
 #  byte[7] NCI_DISCOVERY_TYPE_POLL_B_PRIME
 #  byte[8] NCI_DISCOVERY_TYPE_LISTEN_B_PRIME
 NFA_PROPRIETARY_CFG={05:FF:FF:06:81:80:70:FF:FF}
-
-#################################################################################
+###############################################################################
 # Bail out mode
 #  If set to 1, NFCC is using bail out mode for either Type A or Type B poll.
 NFA_POLL_BAIL_OUT_MODE=0x01
-#################################################################################
+###############################################################################
+# Enable/Disable Block Route feature.
+# Block Route will restrict routing to first matched rule
+# Block Route enable   0x01
+# Block Route disable  0x00
+NFA_BLOCK_ROUTE=0x00
+# Extended APDU length for ISO_DEP
+ISO_DEP_MAX_TRANSCEIVE=0xFEFF
