sagit: nfc: import some values from muskie
Change-Id: I57482713d9bbb54a43bf4e35d1bf92e41f076b6e

--- a/configs/nfc/libnfc-nxp.conf
+++ b/configs/nfc/libnfc-nxp.conf
@@ -59,7 +59,6 @@ NXP_FW_NAME="libpn553_fw.so"
 # System clock source selection configuration
 #define CLK_SRC_XTAL       1
 #define CLK_SRC_PLL        2
-
 NXP_SYS_CLK_SRC_SEL=0x01
 
 ###############################################################################
@@ -70,13 +69,11 @@ NXP_SYS_CLK_SRC_SEL=0x01
 # define CLK_FREQ_26MHZ         4
 # define CLK_FREQ_38_4MHZ       5
 # define CLK_FREQ_52MHZ         6
-
 NXP_SYS_CLK_FREQ_SEL=0x01
 
 ###############################################################################
 # The timeout value to be used for clock request acknowledgment
 # min value = 0x01 to max = 0x06
-
 NXP_SYS_CLOCK_TO_CFG=0x06
 
 ###############################################################################
@@ -170,13 +167,7 @@ NXP_RF_CONF_BLK_4={
 # Set configuration optimization decision setting
 # Enable    = 0x01
 # Disable   = 0x00
-NXP_SET_CONFIG_ALWAYS=0x01
-
-###############################################################################
-# Set configuration optimization decision setting
-# Enable    = 0x01
-# Disable   = 0x00
-NXP_RF_UPDATE_REQ=0x01
+NXP_SET_CONFIG_ALWAYS=0x00
 
 ###############################################################################
 # Core configuration extensions
@@ -255,7 +246,7 @@ NXP_CORE_CONF={ 20, 02, 2E, 0E,
 # eSE               0x01
 # UICC              0x02
 # UICC2             0x04
-NXP_DEFAULT_SE=0x01
+NXP_DEFAULT_SE=0x07
 
 ###############################################################################
 # Enable SWP full power mode when phone is power off
@@ -279,10 +270,12 @@ NXP_NFC_CHIP=0x08
 # Enable            0x01
 NXP_CE_ROUTE_STRICT_DISABLE=0x01
 
+###############################################################################
 # Timeout in secs to get NFCEE Discover notification
 NXP_DEFAULT_NFCEE_DISC_TIMEOUT=20
 
-NXP_DEFAULT_NFCEE_TIMEOUT=0x06
+###############################################################################
+NXP_DEFAULT_NFCEE_TIMEOUT=20
 
 # Timeout in secs
 NXP_SWP_RD_START_TIMEOUT=0x0A
@@ -298,7 +291,7 @@ NXP_SWP_RD_TAG_OP_TIMEOUT=0x01
 # eSE  0x01
 # UICC 0x02
 # UICC2 0x04
-DEFAULT_AID_ROUTE=0x01
+DEFAULT_AID_ROUTE=0x00
 
 ###############################################################################
 # Set the Mifare Desfire route Location :
@@ -307,7 +300,7 @@ DEFAULT_AID_ROUTE=0x01
 # eSE  0x01
 # UICC 0x02
 # UICC2 0x04
-DEFAULT_DESFIRE_ROUTE=0x01
+DEFAULT_DESFIRE_ROUTE=0x02
 
 ###############################################################################
 # Set the Mifare CLT route Location :
@@ -316,7 +309,7 @@ DEFAULT_DESFIRE_ROUTE=0x01
 # eSE  0x01
 # UICC 0x02
 # UICC2 0x04
-DEFAULT_MIFARE_CLT_ROUTE=0x01
+DEFAULT_MIFARE_CLT_ROUTE=0x02
 
 ###############################################################################
 # Set the Felica CLT route Location :
@@ -414,7 +407,7 @@ NXP_JCOPDL_AT_BOOT_ENABLE=0x00
 NXP_LOADER_SERVICE_VERSION=0x21
 ###############################################################################
 # Timeout value  in milliseconds for NFCC standby mode.The range is between 5000 msec to 20000 msec and zero is to disable.
-NXP_NFCC_STANDBY_TIMEOUT=0
+NXP_NFCC_STANDBY_TIMEOUT=20000
 
 ###############################################################################
 # Dynamic RSSI feature enable
@@ -444,11 +437,6 @@ NXP_UICC_WIRED_PRT_MASK=0x00
 NXP_WIRED_MODE_RF_FIELD_ENABLE=0x00
 
 ###############################################################################
-# UICC mode supported
-# Disable           0x00
-# Enable            0x01
-NXP_DUAL_UICC_ENABLE=0x00
-###############################################################################
 # Config to allow adding aids
 # NFC on/off is required after this config
 # 1 = enabling adding aid  to NFCC routing table.
@@ -471,26 +459,18 @@ NXP_CHECK_DEFAULT_PROTO_SE_ID=0x01
 NXP_CN_TRANSIT_BLK_NUM_CHECK_ENABLE=0x01
 ###############################################################################
 # Wired mode resume timeout vaule in wired mode resume feature enable
-NXP_WIREDMODE_RESUME_TIMEOUT = 0x02
+NXP_WIREDMODE_RESUME_TIMEOUT={E8,03,00,00}
 ###############################################################################
 # Power to eSE is controlled by DH or PMU depending on following configurations
 # define DH_PWR_CONTROL         1
 # define PMU_PWR_CONTROL        2
-
 NXP_ESE_POWER_DH_CONTROL=1
 
 ###############################################################################
 # NXP PMU Support configuration is sent if PMU_PWR_CONTROL is configured
 # External PMU available in phone ON and phone OFF case if NXP_ESE_POWER_EXT_PMU=1
 # External PMU available only in phone ON case if NXP_ESE_POWER_EXT_PMU=2
-
 NXP_ESE_POWER_EXT_PMU=2
-
-###############################################################################
-# Enable/Disable mifare desfire CE prio feature
-# Disable           0x00
-# Enable            0x01
-NXP_MIFARE_DESFIRE_DISABLE=0x00
 
 ###############################################################################
 # Whether to allow wired mode in desfire and mifare CLT
